--- a/sway/config
+++ b/sway/config
@@ -33,11 +33,25 @@ set $menu gtkmenu --width 500 --height 260
 # Setting the wallpaper
 output * bg $wallpaper fill
 
+# And restore the color scheme
+exec wal -R
+
+# Setting up a gtk them
+set $gnome-schema org.gnome.desktop.interface
+
+exec_always {
+    gsettings set $gnome-schema gtk-theme 'High Contrast'
+    gsettings set $gnome-schema icon-theme 'Papirus'
+    gsettings set $gnome-schema cursor-theme 'Your cursor Theme'
+}
+
 # Setting the correct display resolution
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
 # Surface pro display
 output eDP-1 resolution 2736x1824
+# Oldtop display
+output DVI-I-1 resolution 1600x900
 
 ### Font Configuration
 # Font for window titles
