--- a/sway/config
+++ b/sway/config
@@ -33,23 +33,24 @@ set $menu gtkmenu --width 500 --height 260
 # Setting the wallpaper
 output * bg $wallpaper fill
 
-# And restore the color scheme
-exec wal -R
-
 # Setting up a gtk them
 set $gnome-schema org.gnome.desktop.interface
 
 exec_always {
-    gsettings set $gnome-schema gtk-theme 'High Contrast'
-    gsettings set $gnome-schema icon-theme 'Papirus'
-    gsettings set $gnome-schema cursor-theme 'Your cursor Theme'
+    gsettings set $gnome-schema gtk-theme 'Juno'
+    gsettings set $gnome-schema icon-theme 'Zafiro'
+    gsettings set $gnome-schema cursor-theme 'capitaine-cursor'
 }
 
 # Setting the correct display resolution
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-# Surface pro display
-output eDP-1 resolution 2736x1824
+# Goldtop display
+set $laptop eDP-1
+output $laptop resolution 1920x1080
+bindswitch --reload lid:on output $laptop disable
+bindswitch --reload lid:off output $laptop enable
+
 # Oldtop display
 output DVI-I-1 resolution 1600x900
 
@@ -80,6 +81,13 @@ font San Francisco Display Medium 12
        middle_emulation enabled
    }
 
+   input "1739:33391:SYNA3081:00_06CB:826F_Touchpad" {
+       dwt enabled
+       tap enabled
+       natural_scroll enabled
+       middle_emulation enabled
+   }
+
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
 
@@ -93,12 +101,20 @@ font San Francisco Display Medium 12
     bindsym XF86AudioLowerVolume exec pulseaudio-ctl down
     bindsym XF86AudioMute exec pulseaudio-ctl mute
     bindsym XF86AudioMicMute exec pulseaudio-ctl mute-input
+    bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
+    bindsym XF86MonBrightnessUp exec brightnessctl set +5%
 
     # Kill focused window
     bindsym $mod+Shift+q kill
 
     # Start your launcher
     bindsym $mod+d exec --no-startup-id $menu
+
+    # Lock the screen
+    bindsym $mod+Insert exec swaylock
+
+    # Take a Screenshot
+    bindsym $mod+Print exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') 
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -249,7 +265,7 @@ gaps inner 10
 gaps outer 10
 
 #--- Borders ---------------------------------------------------------------
-default_floating_border normal 1 #$border
+default_floating_border pixel 1 #$border
 default_border          pixel  1 
 for_window [title="."] title_format "%title"
 titlebar_border_thickness 0
