--- a/sway/config
+++ b/sway/config
@@ -39,7 +39,7 @@ set $gnome-schema org.gnome.desktop.interface
 exec_always {
     gsettings set $gnome-schema gtk-theme 'Juno'
     gsettings set $gnome-schema icon-theme 'Zafiro'
-    gsettings set $gnome-schema cursor-theme 'capitaine-cursor'
+    gsettings set $gnome-schema cursor-theme 'capitaine-cursors'
 }
 
 # Setting the correct display resolution
