--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -34,7 +34,7 @@
             "format": "{}% "
         },
         "memory": {
-            "format": "{}% "
+            "format": "{used:0.1f}G/{total:0.1f}G "
         },
         "battery": {
         "tooltip": false,
