--- a/config/sway/config
+++ b/config/sway/config
@@ -25,11 +25,11 @@ bindsym $mod+Return exec $term
 # on the original workspace that the command was run on.
 # set $menu dmenu_path | dmenu | xargs swaymsg exec --
 # this is gmenu! https://git.sr.ht/~tslocum/gmenu?0.2.4
-#set $menu bemenu-run -n
-set $menu dmenu_run
+set $menu wofi -S run
+
 
 # Setting the wallpaper
-output * bg $HOME/myrepo/dotfiles/walls/walldune.jpg fill
+output * bg $HOME/myrepo/dotfiles/walls/nature-sky-sunset-169.jpg fill
 
 # Setting up a gtk theme
 set $gnome-schema org.gnome.desktop.interface
@@ -57,7 +57,7 @@ output HDMI-A-1 resolution 1920x1080
 
 ### Font Configuration
 # Font for window titles
-font San Francisco Display Medium 12 
+font pango:FiraCode 12 
 
 ### Idle configuration
 
@@ -75,19 +75,18 @@ font San Francisco Display Medium 12
 #
 # Example configuration:
 
-   input "1118:2496:Microsoft_Surface_Type_Cover_Touchpad" {
-       dwt enabled
-       tap enabled
-       natural_scroll enabled
-       middle_emulation enabled
-   }
+input "1739:33391:SYNA3081:00_06CB:826F_Touchpad" {
+	dwt enabled
+       	tap enabled
+       	natural_scroll enabled
+      	middle_emulation enabled
+}
 
-   input "1739:33391:SYNA3081:00_06CB:826F_Touchpad" {
-       dwt enabled
-       tap enabled
-       natural_scroll enabled
-       middle_emulation enabled
-   }
+input "1452:591:USB_Keychron_K2_USB_DEVICE" {
+	xkb_layout us,it
+	xkb_variant ,nodeadkeys
+	xkb_options grp:lctrl_lwin_toggle
+}
 
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
@@ -104,6 +103,9 @@ font San Francisco Display Medium 12
     bindsym XF86AudioMicMute exec pulseaudio-ctl mute-input
     bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
     bindsym XF86MonBrightnessUp exec brightnessctl set +5%
+
+    # Take a screenshot and copy it to the clipboard
+    bindsym $mod+p exec grim -g "$(slurp -d)" - | wl-copy
 
     # Kill focused window
     bindsym $mod+Shift+q kill
@@ -284,12 +286,13 @@ bindsym $mod+r mode "resize"
 # Running waybar
 bar {
     swaybar_command waybar 
+    #swaybar_command i3status-rs
 }
 
 #--- Gaps ------------------------------------------------------------------
 gaps inner 10
 gaps outer 10
-smart_gaps off
+smart_gaps on
 
 #--- Borders ---------------------------------------------------------------
 default_floating_border pixel 1
