--- a/config/sway/config
+++ b/config/sway/config
@@ -3,7 +3,7 @@
 #
 #
 # First things first... let's put the italian keymap
-input * xkb_layout us
+input * xkb_layout it
 
 ### Variables
 #
@@ -28,7 +28,7 @@ bindsym $mod+Return exec $term
 set $menu bemenu-run -n
 
 # Setting the wallpaper
-output * bg $HOME/Pictures/Wallpapers/224003.jpg fill
+output * bg $HOME/Immagini/walls/nyultrawide.jpg fill
 
 # Setting up a gtk theme
 set $gnome-schema org.gnome.desktop.interface
@@ -42,8 +42,8 @@ exec_always {
 # Setting the correct display resolution
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-# Hdmi
-output LVDS-1 resolution 1366x768
+# Surface Display
+output eDP-1 resolution 2736x1824
 
 ### Font Configuration
 # Font for window titles
@@ -65,6 +65,7 @@ font San Francisco Display Medium 12
 #
 # Example configuration:
 
+# Surface Trackpad
    input "1118:2496:Microsoft_Surface_Type_Cover_Touchpad" {
        dwt enabled
        tap enabled
