--- a/config/waybar/config
+++ b/config/waybar/config
@@ -5,7 +5,7 @@
         "modules-center": ["sway/window"],
         "modules-right": ["memory", "cpu", "network", "pulseaudio", "battery", "clock"],
         "sway/workspaces": {
-            "disable-scroll": true
+            "disable-scroll": true,
         },
         "sway/mode": {
         "tooltip": false,
@@ -23,27 +23,30 @@
             "format": "{}% "
         },
         "memory": {
-            "format": "{used:0.1f}G/{total:0.1f}G "
+            "format": "{}% "
         },
         "battery": {
-        "tooltip": false,
+            "tooltip": false,
             "states": {
-                "critical": 25
+		"warning": 25,
+                "critical": 10
             },
             "format": "{capacity}% {icon}",
-            "format-full": "",
-            "format-icons": ["", "", "", "", ""],
+            "format-full": "",
+            "format-charging": "",
+            "format-icons": ["", "", "", ""],
             "on-click": "/home/tb/scripts/inhibitSuspend.sh"
         },
         "network": {
-            "interface": "wlp1s0",
-            "format-wifi": "{ipaddr} ",
-            "format-disconnected": "",
-	    	"tooltip-format": "{ifname}",
-	    	"tooltip-format-wifi": "{essid} ({signalStrength}%) ",
- 	    	"tooltip-format-ethernet": "{ifname} ",
-	    	"tooltip-format-disconnected": "Disconnected",
-        	"on-click": "nm-connection-editor"
+            "format": "{ipaddr} {icon}",
+            "format-alt": "{ipaddr}/{cidr} {icon}",
+            "format-alt-click": "click-right",
+            "format-icons": {
+                "wifi": ["", "" ,""],
+                "ethernet": [""],
+                "disconnected": [""]
+            },
+            "on-click": "alacritty -e nmtui"
         },
        "pulseaudio": {
            "format": "{volume}% {icon}",
@@ -58,7 +61,7 @@
                "car": "",
                "default": ["", ""]
            },
-           "scroll-step": 1,
+           "scroll-step": 5,
            "on-click": "pavucontrol"
        }
 }]
