fix posizione i3status.conf

--- a/config/i3status/i3status.conf
+++ b/config/i3status/i3status.conf
@@ -21,6 +21,7 @@ order += "ethernet _first_"
 order += "cpu_usage"
 order += "cpu_temperature 0"
 order += "memory"
+order += "battery 1"
 order += "tztime local"
 
 wireless _first_ {
@@ -33,9 +34,16 @@ ethernet _first_ {
         format_down = ""
 }
 
-battery 0 {
+battery 1 {
 	format = " %percentage"
-	integer_battery_capacity = true
+	low_threshold = 15
+        threshold_type = "percent"
+        last_full_capacity = true
+        hide_seconds = true
+        integer_battery_capacity = true
+        status_chr = "AC"
+        status_bat = "DC"
+        path = "/sys/class/power_supply/BAT1/uevent"
 }
 
 disk "/" {
