--- a/config/i3status/i3status.conf
+++ b/config/i3status/i3status.conf
@@ -17,7 +17,7 @@ general {
 }
 
 order += "wireless _first_"
-order += "ethernet _first_"
+order += "volume master"
 order += "cpu_usage"
 order += "cpu_temperature 0"
 order += "memory"
@@ -52,6 +52,12 @@ disk "/" {
 
 disk "/home" {
         format = " %avail "
+}
+
+volume master {
+        format = ": %volume"
+        format_muted = ": muted (%volume)"
+        device = "pulse:alsa_output.pci-0000_00_1f.3.analog-stereo"
 }
 
 load {
