--- a/config/sway/config
+++ b/config/sway/config
@@ -1,364 +1,22 @@
 # Alexanderi96's config file for sway
-
-### Variables
 #
-# Logo key. Use Mod1 for Alt and Mod4 for win
-set $mod Mod1
+# Read `man 5 sway` for a complete reference.
 
-# Home row direction keys, like vim
-set $left h
-set $down j
-set $up k
-set $right l
+set $dot_pos $HOME/.config/sway
 
-# Note: pass the final command to swaymsg so that the resulting window can be opened
-# on the original workspace that the command was run on.
-# set $menu dmenu_path | dmenu |xargs swaymsg exec --
-# this is gmenu! https://git.sr.ht/~tslocum/gmenu?0.2.4
+# global variables
+include $dot_pos/definitions
 
-# Setting the wallpaper
-output * bg $HOME/Immagini/walls/waycazz.png fill
+# inputs/outputs definition
+include $dot_pos/inputs/*
+include $dot_pos/outputs/*
 
-# Setting up a gtk theme
-set $gnome-schema org.gnome.desktop.interface
+# enable modes
+include $dot_pos/modes/*
 
-exec_always {
-    gsettings set $gnome-schema gtk-theme 'Pop-nord-dark'
-    gsettings set $gnome-schema icon-theme 'Fluent-yellow'
-    gsettings set $gnome-schema cursor-theme 'capitaine-cursors'
-}
+# only enable this if every app you use is compatible with wayland
+# xwayland disable
 
-# Setting the correct display resolution
-# You can get the names of your outputs by running: swaymsg -t get_outputs
-
-# Surface Display
-set $surface_display eDP-1
-set $mi_gaming_monitor DP-1
-
-output $surface_display pos 1056 1440 mode 2736x1824@59.959000Hz
-bindswitch --reload lid:on output $surface_display disable
-bindswitch --reload lid:off output $surface_display enable
-
-# Mi Gaming Monitor
-output $mi_gaming_monitor pos 0 0 mode 3440x1440@120.000000Hz
-
-### Font Configuration
-# Font for window titles
-font San Francisco Display Medium 12 
-
-### Idle configuration
- exec swayidle -w \
-          timeout 300 'swaylock -f -c 000000' \
-          timeout 600 'swaymsg "output * dpms off"' \
-               resume 'swaymsg "output * dpms on"' \
-          before-sleep 'swaylock -f -c 000000'
-
-# This will lock your screen after 300 seconds of inactivity, then turn off
-# your displays after another 300 seconds, and turn your screens back on when
-# resumed. It will also lock your screen before your computer goes to sleep.
-
-### Input configuration
-#
-# Example configuration:
-
-# Surface type cover trackpad
-   input "1118:2496:Microsoft_Surface_Type_Cover_Touchpad" {
-       dwt enabled
-       tap enabled
-       natural_scroll enabled
-       middle_emulation enabled
-   }
-
-# Surface type cover keyboard
-   input "1118:2496:Microsoft_Surface_Type_Cover_Keyboard" {
-	xkb_layout it
-   }
-
-# Surface touchscreen configuration
-   input "1118:31:IPTS_Touch" map_to_output $surface_display
-
-# Keychron K2 Mechanical keyboard
-   input "1452:597:Keychron_K2" {
-	xkb_layout us
-   }
-
-# You can get the names of your inputs by running: swaymsg -t get_inputs
-# Read `man 5 sway-input` for more information about this section.
-
-# Applications
-set $term alacritty
-set $menu bemenu-run -n
-set $lock_manager swaylock
-set $fm nautilus
-set $browser $HOME/.local/bin/firefox-wayland
-
-### Key bindings
-#
-# Basics:
-#
-
-    # Pulse Audio
-    bindsym XF86AudioRaiseVolume exec pulseaudio-ctl up
-    bindsym XF86AudioLowerVolume exec pulseaudio-ctl down
-    bindsym XF86AudioMute exec pulseaudio-ctl mute
-    bindsym XF86AudioMicMute exec pulseaudio-ctl mute-input
-    bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
-    bindsym XF86MonBrightnessUp exec brightnessctl set +5%
-
-    # Kill focused window
-    bindsym $mod+Shift+q kill
-
-    # Start your launcher
-    bindsym $mod+d exec --no-startup-id $menu
-
-    # Start your terminal emulator
-    bindsym $mod+Return exec $term
-
-    # Start your browser
-    bindsym $mod+z exec $browser
-
-    # Start your file manager
-    bindsym $mod+n exec $fm
-    
-    # Lock the screen
-    bindsym $mod+Insert exec swaylock
-
-    # Take a Screenshot
-    bindsym Print exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') 
-
-    # Drag floating windows by holding down $mod and left mouse button.
-    # Resize them with right mouse button + $mod.
-    # Despite the name, also works for non-floating windows.
-    # Change normal to inverse to use left mouse button for resizing and right
-    # mouse button for dragging.
-    floating_modifier $mod normal
-
-    # Reload the configuration file
-    bindsym $mod+Shift+c reload
-
-    # Exit sway (logs you out of your Wayland session)
-    bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
-
-    # Poweroff
-    bindsym $mod+Shift+p exec poweroff
-#
-# Moving around:
-#
-    # Move your focus around
-    bindsym $mod+$left focus left
-    bindsym $mod+$down focus down
-    bindsym $mod+$up focus up
-    bindsym $mod+$right focus right
-    # Or use $mod+[up|down|left|right]
-    bindsym $mod+Left focus left
-    bindsym $mod+Down focus down
-    bindsym $mod+Up focus up
-    bindsym $mod+Right focus right
-
-    # Move the focused window with the same, but add Shift
-    bindsym $mod+Shift+$left move left
-    bindsym $mod+Shift+$down move down
-    bindsym $mod+Shift+$up move up
-    bindsym $mod+Shift+$right move right
-    # Ditto, with arrow keys
-    bindsym $mod+Shift+Left move left
-    bindsym $mod+Shift+Down move down
-    bindsym $mod+Shift+Up move up
-    bindsym $mod+Shift+Right move right
-#
-# Workspaces:
-#
-
-    # Defining some Unicode workspace icons
-
-    set $ws1 "1 "
-    set $ws2 "2 "
-    set $ws3 "3 "
-    set $ws4 "4 "
-    set $ws5 "5"
-    set $ws6 "6"
-    set $ws7 "7"
-    set $ws8 "8"
-    set $ws9 "9"
-    set $ws10 "10"
-
-
-    # and let't assign them to the big monitor by default
-    workspace $ws1 output $mi_gaming_monitor $surface_display
-    workspace $ws2 output $mi_gaming_monitor $surface_display
-    workspace $ws3 output $mi_gaming_monitor $surface_display
-    workspace $ws4 output $mi_gaming_monitor $surface_display
-
-
-
-    # Switch to workspace
-    bindsym $mod+1 workspace $ws1
-    bindsym $mod+2 workspace $ws2
-    bindsym $mod+3 workspace $ws3
-    bindsym $mod+4 workspace $ws4
-    bindsym $mod+5 workspace $ws5
-    bindsym $mod+6 workspace $ws6
-    bindsym $mod+7 workspace $ws7
-    bindsym $mod+8 workspace $ws8
-    bindsym $mod+9 workspace $ws9
-    bindsym $mod+0 workspace $ws10
-    # Move focused container to workspace
-    bindsym $mod+Shift+1 move container to workspace $ws1
-    bindsym $mod+Shift+2 move container to workspace $ws2
-    bindsym $mod+Shift+3 move container to workspace $ws3
-    bindsym $mod+Shift+4 move container to workspace $ws4
-    bindsym $mod+Shift+5 move container to workspace $ws5
-    bindsym $mod+Shift+6 move container to workspace $ws6
-    bindsym $mod+Shift+7 move container to workspace $ws7
-    bindsym $mod+Shift+8 move container to workspace $ws8
-    bindsym $mod+Shift+9 move container to workspace $ws9
-    bindsym $mod+Shift+0 move container to workspace $ws10
-    # Note: workspaces can have any name you want, not just numbers.
-    # We just use 1-10 as the default.
-
-#
-# Let's assign some apps to some workspaces 
-#
-
-    assign [app_id="firefox"] $ws1
-    assign [app_id="subl"] $ws2
-    assign [app_id="telegram"] $ws3
-    assign [app_id="steam"] $ws4
-
-#
-# Layout stuff:
-#
-    # You can "split" the current object of your focus with
-    # $mod+b or $mod+v, for horizontal and vertical splits
-    # respectively.
-    bindsym $mod+b splith
-    bindsym $mod+v splitv
-
-    # Switch the current container between different layout styles
-    bindsym $mod+s layout stacking
-    bindsym $mod+w layout tabbed
-    bindsym $mod+e layout toggle split
-
-    # Make the current focus fullscreen
-    bindsym $mod+f fullscreen
-
-    # Toggle the current focus between tiling and floating mode
-    bindsym $mod+Shift+space floating toggle
-
-    # Swap focus between the tiling area and the floating area
-    bindsym $mod+space focus mode_toggle
-
-    # Move focus to the parent container
-    bindsym $mod+a focus parent
-#
-# Scratchpad:
-#
-    # Sway has a "scratchpad", which is a bag of holding for windows.
-    # You can send windows there and get them back later.
-
-    # Move the currently focused window to the scratchpad
-    bindsym $mod+Shift+minus move scratchpad
-
-    # Show the next scratchpad window or hide the focused scratchpad window.
-    # If there are multiple scratchpad windows, this command cycles through them.
-    bindsym $mod+minus scratchpad show
-
-    # Colors (Horizon Dark) tkx alacritty
-   # Default colors
-     set $background	 '#1c1e26'
-     set $foreground	 '#e0e0e0'
- 
-   # Normal colors
-     set $black		 '#16161c'
-     set $red		 '#e95678'
-     set $green		 '#29d398'
-     set $yellow	 '#fab795'
-     set $blue		 '#26bbd9'
-     set $magenta	 '#ee64ac'
-     set $cyan		 '#59e1e3'
-     set $white		 '#d5d8da'  
- 
-   # Bright colors
-     set $bright_black	 '#5b5858'  
-     set $bright_red	 '#ec6a88'
-     set $bright_green	 '#3fdaa4'
-     set $bright_yellow	 '#fbc3a7'
-     set $bright_blue	 '#3fc4de'
-     set $bright_magenta '#f075b5'
-     set $bright_cyan	 '#6be4e6'
-     set $bright_white	 '#d5d8da'  
-
-     #
-     # Colors!
-     #
-     # class                 border         	background      text         indicator         	child_border
-     client.focused          $red		$red         	$foreground  $red           	$red
-     client.focused_inactive $background 	$background     $foreground  $background       	$background
-     client.unfocused        $background  	$background     $foreground  $background       	$black
-     client.urgent           $red        	$red         	$foreground  $red           	$red
-     client.placeholder      $red        	$red         	$foreground  $red           	$red
- 
-     client.background       $red
-
-titlebar_padding 6 2
-titlebar_border_thickness 2
-
-#
-# Resizing containers:
-#
-mode "resize" {
-    # left will shrink the containers width
-    # right will grow the containers width
-    # up will shrink the containers height
-    # down will grow the containers height
-    bindsym $left resize shrink width 10px
-    bindsym $down resize grow height 10px
-    bindsym $up resize shrink height 10px
-    bindsym $right resize grow width 10px
-
-    # Ditto, with arrow keys
-    bindsym Left resize shrink width 10px
-    bindsym Down resize grow height 10px
-    bindsym Up resize shrink height 10px
-    bindsym Right resize grow width 10px
-
-    # Return to default mode
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-}
-bindsym $mod+r mode "resize"
-
-#--- Gaps ------------------------------------------------------------------
-gaps inner 10
-gaps outer 10
-smart_gaps off
-
-#--- Borders ---------------------------------------------------------------
-default_floating_border pixel 2
-default_border          pixel 2 
-for_window [title="."] title_format "%title"
-titlebar_border_thickness 0
-titlebar_padding 3 3
-hide_edge_borders smart_no_gaps
-
-##########################################################################
-
-bar {
-    status_command i3status -c $HOME/.config/i3status/i3status.conf
-    position top
-    height 30
-    tray_output none
-    font pango: Hack 10, FontAwesome 10
-    colors {
-        statusline $foreground
-        background $background
-        inactive_workspace $background $background $foreground
-        active_workspace $background $background $foreground
-        focused_workspace $foreground $foreground $background
-        urgent_workspace $red $red $foreground
-    }
-}
-
+# include additional configs e.g. to autostart applications
+include $dot_pos/config.d/*
 include /etc/sway/config.d/*
-
-
