--- a/config/i3status/i3status.conf
+++ b/config/i3status/i3status.conf
@@ -57,7 +57,7 @@ disk "/home" {
 volume master {
         format = ": %volume"
         format_muted = ": muted (%volume)"
-        device = "pulse:alsa_output.pci-0000_00_1f.3.analog-stereo"
+	device = "hw:0"
 }
 
 load {
